# ccfrp

./: README.md  pyproject.toml  requirements.txt  setup.cfg
db/: location.csv  species.csv
src/: angler.py  api.py  auth.py  ccfrp.py  ccfrp_app.py
src/ccfrp/: angler.py  ccfrp.py
src/static/: style.css
src/templates/: base.html  select_fish.html  select_fish_area.html  select_fish_area_effort.html  select_fish_gridcell.html  select_fish_gridcell_effort.html  select_templates.html
test/: test_angler.py  test_api.py  test_ccfrp.py
