[metadata]
name = ccfrp
version = attr: ccfrp.__version__
author = Connor Dibble
author_email = cddibble@gmail.com
url = 'https://github.com/cdibble/ccfrp'
description = Interface for CA Collaborative Fisheries Research Program Data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ccfrp, fish
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
notebook = jupyter>=1.0.0; matplotlib
dev = 
    black==22.1.0
    flake8==4.0.1
